Fixed cards not overlapping

--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -15,7 +15,7 @@ $card-color-secondary: #17141d;
     color: white; 
     flex-direction: column;
     height: 350px;
-    width: 400px;
+    max-width: 370px;
     min-width: 250px;
     padding: 1.5rem;
     text-decoration: none;
@@ -34,7 +34,7 @@ $card-color-secondary: #17141d;
     display: grid;
     grid-template-columns: 75px 1fr;
     align-items: center;
-    margin: 3rem 0 0;
+    margin: 10rem 0 0;
 }
  
 .dev-card-half-circle {
@@ -145,7 +145,7 @@ $card-color-secondary: #17141d;
 }
 
 .dev-card:not(:first-child) {
-    margin-left: 130px;
+    margin-left: -130px;
 }
 
 .dev-card-list::-webkit-scrollbar {
